# clipboard-data

./: .gitignore  README.md  build.bat  clipboard_history.json  index.html  main.py  main.spec  package-lock.json  package.json  requirements.txt
.github/workflows/: ci.yml  lint.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
